--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
-# set the project name and version
 
+set(CMAKE_CXX_STANDARD 17)
+
+# set the project name and version
 project(TLT-TrafficDetect VERSION 1.0)
 
 add_subdirectory(src/cpp)
